--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,2 @@
-tasks:
-  - init: |
-      npm install
-      gp sync-done installation
-    command: npm run server
-  - init: gp sync-await installation
-    command: mkdir -p /workspace/data && mongod --dbpath /workspace/data
+image:
+  file: .gitpod.dockerfile
