--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,2 +1,3 @@
-image:
-  file: .gitpod.dockerfile
+tasks:
+  - init: npm install
+    command: mkdir -p /workspace/data && mongod --dbpath /workspace/data
