edited yml file

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,2 @@
 tasks:
-  - init: npm install
-    command: mkdir -p /workspace/data && mongod --dbpath /workspace/data
+    - command: mkdir -p /workspace/data && mongod --dbpath /workspace/data
